opam-version: "2.0"
maintainer:   "lucas.pluvinage@ens.fr"
homepage:     "https://github.com/well-typed-lightbulbs/mirage-esp32"
bug-reports:  "https://github.com/well-typed-lightbulbs/mirage-esp32/issues"
dev-repo:     "git+https://github.com/well-typed-lightbulbs/mirage-esp32.git"
license:      "ISC"
version:      "4.0.0"
authors: ["Lucas Pluvinage"]
tags: []
build: [ "dune" "build" "-x" "esp32" "-p" "mirage-esp32"]
depends: [
  "dune" {build}
  "ocaml-esp32"
  "lwt" {>= "2.4.3"}
  "psq"
  "logs"
  "esp32-idf-headers"
]

available: [ ocaml-version >= "4.07.1" ]
